<resources>
    <string name="app_name">cielo_bin_query</string>

    <!-- Labels -->
    <string name="status_label">Status:</string>
    <string name="provider_label">Provider:</string>
    <string name="cardtype_label">CardType:</string>
    <string name="foreigncard_label">ForeignCard:</string>
    <string name="corporatecard_label">CorporateCard:</string>
    <string name="issuer_label">Issuer:</string>
    <string name="issuercode_label">IssuerCode:</string>

    <!-- Placeholders -->
    <string name="status_placeholder">00</string>
    <string name="provider_placeholder">VISA</string>
    <string name="cardtype_placeholder">Multiplo</string>
    <string name="foreigncard_placeholder">false</string>
    <string name="corporatecard_placeholder">false</string>
    <string name="issuer_placeholder">Bradesco</string>
    <string name="issuercode_placeholder">237</string>

</resources>